--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 /* Reset */
-
 body {
     margin: 0;
     padding: 0;
@@ -19,28 +18,110 @@ input {
     border: 1px solid transparent;
     border-bottom: 1px solid #ccc;
     padding: 10px 0px;
-
 }
 
-input [type=text], input[type=number], input[type=date], input[type=file]{
-    width: 400pxs
+input[type=text], input[type=number], input[type=date], input[type=file] {
+    width: 400px;
 }
 
-textarea{
+textarea {
     padding: 10px 5px;
     width: 400px;
 }
 
 /* Cabeçalho da página */
-
 .header {
     height: 160px;
     padding: 20px;
     background-color: #673ab7;
 }
 
-header h3 {
+.header h3 {
     color: #fff;
     margin-top: 0;
+}
 
+/* Container de formulário */
+.form-container {
+    background-color: #fff;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    top: -62px;
+}
+
+/* Cabeçalho do formulário*/
+.form-header {
+    border-bottom: 1px solid #dfdfdf;
+    height: 45px;
+}
+
+.form-header p {
+    color: #673ab7;
+    border-bottom: 2px solid #673Ab7;
+    width: 100px;
+    text-align: center;
+    margin-right:auto;
+    margin-left: auto;
+    text-transform:uppercase;
+    height: 45px;
+    line-height: 45px;
+
+}
+
+/* Corpo formulário */
+.form-body {
+    padding: 30px;
+}
+
+.form-tittle {
+    margin: 0;
+}
+
+.required-field {
+    color: #D80835;
+}
+
+.box-input {
+    margin-bottom: 30px;
+}
+
+.black {
+    display: block;
+}
+
+.optional_box {
+    display: inline-block;
+    margin-right: 30px;
+}
+
+.optional_list {
+    padding-left: 0;
+}
+
+.optional_list li {
+    list-style: none;
+}
+
+.btn-submit {
+    background-color: #673ab7;
+    color: #fff;
+    border: 2px solid transparent;
+    width: 150px;
+    height: 50px;
+    text-transform: uppercase;
+    cursor: pointer;
+    transform: .5s;
+}
+
+.btn-submit:hover {
+    background-color: #fff;
+    border-color:#673ab7;
+    color: #673ab7;
+}
+
+.btn-position {
+    margin-left: 40%;
+    margin-bottom: 50px;
 }
