--- a/css/styles.css
+++ b/css/styles.css
@@ -1,127 +1,125 @@
-/* Reset */
+/* reset */
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #F0EBF8;
+	margin: 0;
+	padding: 0;
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: #F0EBF8;
 }
 
 h1, h2, h3, h4, h5 {
-    color: #333;
+	color: #333;
 }
 
 p, label {
-    color: #444;
+	color: #444;
 }
 
 input {
-    border: 1px solid transparent;
-    border-bottom: 1px solid #ccc;
-    padding: 10px 0px;
+	border: 1px solid transparent;
+	border-bottom: 1px solid #CCC;
+	padding: 10px 0px;
 }
 
 input[type=text], input[type=number], input[type=date], input[type=file] {
-    width: 400px;
+	width: 400px;
 }
 
 textarea {
-    padding: 10px 5px;
-    width: 400px;
+	padding: 10px 5px;
+	width: 400px;
 }
 
-/* Cabeçalho da página */
+/* cabeçalho da página */
 .header {
-    height: 160px;
-    padding: 20px;
-    background-color: #673ab7;
+	height: 160px;
+	padding: 20px;
+	background-color: #673AB7;
 }
 
 .header h3 {
-    color: #fff;
-    margin-top: 0;
+	color: #FFF;
+	margin-top: 0;
 }
 
-/* Container de formulário */
+/* container do formulário */
 .form-container {
-    background-color: #fff;
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    top: -62px;
+	background-color: #FFF;
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+	position: relative;
+	top: -62px;
 }
 
-/* Cabeçalho do formulário*/
+/* cabeçalho do formulário */
 .form-header {
-    border-bottom: 1px solid #dfdfdf;
-    height: 45px;
+	border-bottom: 1px solid #DFDFDF;
+	height: 45px;
 }
 
 .form-header p {
-    color: #673ab7;
-    border-bottom: 2px solid #673Ab7;
-    width: 100px;
-    text-align: center;
-    margin-right:auto;
-    margin-left: auto;
-    text-transform:uppercase;
-    height: 45px;
-    line-height: 45px;
-
+	color: #673AB7;
+	border-bottom: 2px solid #673AB7;
+	width: 100px;
+	text-align: center;
+	margin-right: auto;
+	margin-left: auto;
+	text-transform: uppercase;
+	height: 45px;
+	line-height: 45px;
 }
 
-/* Corpo formulário */
+/* corpo formulário */
 .form-body {
-    padding: 30px;
+	padding: 30px;
 }
 
-.form-tittle {
-    margin: 0;
+.form-title {
+	margin: 0;
 }
 
 .required-field {
-    color: #D80835;
+	color: #D80835;
 }
 
 .box-input {
-    margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
-.black {
-    display: block;
+.block {
+	display: block;
 }
 
 .optional_box {
-    display: inline-block;
-    margin-right: 30px;
+	display: inline-block;
+	margin-right: 30px;
+}
+.optional_box p {
+	margin-left: 30px;
+
 }
 
-.optional_list {
-    padding-left: 0;
+.option_list {
+	padding-left: 0;
 }
 
 .optional_list li {
-    list-style: none;
+	list-style: none;
 }
 
 .btn-submit {
-    background-color: #673ab7;
-    color: #fff;
-    border: 2px solid transparent;
-    width: 150px;
-    height: 50px;
-    text-transform: uppercase;
-    cursor: pointer;
-    transform: .5s;
+	background-color: #673AB7;
+	color: #FFF;
+	border: 2px solid transparent;
+	width: 150px;
+	height: 50px;
+	text-transform: uppercase;
+	cursor: pointer;
+	transition: .5s;
 }
 
 .btn-submit:hover {
-    background-color: #fff;
-    border-color:#673ab7;
-    color: #673ab7;
-}
-
-.btn-position {
-    margin-left: 40%;
-    margin-bottom: 50px;
+	background-color: #FFF;
+	border-color: #673AB7;
+	color: #673AB7;
 }
